--- a/frigate/tests/mockcharts/simple/values.yaml
+++ b/frigate/tests/mockcharts/simple/values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1  # Number of nginx replicas
+replicaCount: 1
 
 image:
   repository: nginx
