--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include versioneer.py
 include frigate/_version.py
-include frigate/templates/*.tpl
+include frigate/templates/*.jinja2
 exclude frigate/tests
