--- a/setup.cfg
+++ b/setup.cfg
@@ -10,3 +10,6 @@ versionfile_source = frigate/_version.py
 versionfile_build = frigate/_version.py
 tag_prefix =
 parentdir_prefix =
+
+[flake8]
+max-line-length = 120
