--- a/setup.cfg
+++ b/setup.cfg
@@ -13,3 +13,12 @@ parentdir_prefix =
 
 [flake8]
 max-line-length = 120
+
+[tool:pytest]
+addopts =   --cov-fail-under 55 --cov frigate
+
+[coverage:run]
+omit =
+     */.frigate
+     frigate/sphinx/*
+     frigate/tests/*
