--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 
 [versioneer]
 VCS = git
-style = pep440
+style = pep440-pre
 versionfile_source = frigate/_version.py
 versionfile_build = frigate/_version.py
 tag_prefix =
