fix: recommandations from  asottile
https://github.com/pre-commit/pre-commit.com/pull/543#issuecomment-896005808

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -2,5 +2,5 @@
     name: frigate
     entry: frigate hook
     language: python
-    require_serial: true
+    pass_filenames: false
     always_run: true
