fix: add metadata
Get Hook type and description  on https://pre-commit.com/hooks.html

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,6 +1,8 @@
 -   id: frigate
     name: frigate
     entry: frigate hook
+    description: Run frigate to generate documentation for your Helm charts.
     language: python
     pass_filenames: false
     always_run: true
+    types: ["helm"]
