--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+requirements.lock
+simple-0.1.0.tgz
+
+
+
+# Below are entries from Python.gitignore
+#
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
