Fix pre-commit hooks failure to declare conda-forge as a channel

--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,8 @@
 # also explicitly install frigate itself within this repo.
 #
 name: pre-commit-hook-environment
+channels:
+  - conda-forge
 dependencies:
   - python
   - kubernetes-helm
