--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.x # replace with the version of Python you're using
+          python-version: '3.10'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -50,7 +50,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.x # replace with the version of Python you're using
+          python-version: '3.10'
       - name: Install dependencies
         run: $CONDA/bin/conda install -c conda-forge conda-build anaconda-client
       - name: Build package
