--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,6 +25,7 @@ on:
 jobs:
   build_and_upload_pypi:
     runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/v') # only release pypi on release tags
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
