--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,58 +7,15 @@ on:
     tags:
       - v[0-9][0-9].[0-9][0-9].[0-9][0-9]
 
-  workflow_dispatch:
-    inputs:
-      branch:
-        required: true
-        type: string
-      date:
-        required: true
-        type: string
-      sha:
-        required: true
-        type: string
-      build_type:
-        type: string
-        default: nightly
-
 jobs:
   build_and_upload_pypi:
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v') # only release pypi on release tags
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install wheel setuptools twine
-      - name: Build package
-        run: python setup.py sdist bdist_wheel
-      - name: Upload to PyPI
-        env:
-          TWINE_USERNAME: rapidsai
-          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-        run: twine upload --skip-existing dist/*
+    name: Build Frigate Package
+    uses: ./.github/workflows/build_and_upload_to_conda.yaml
+    with:
+      upload: true
 
   build_and_upload_conda:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-      - name: Install dependencies
-        run: $CONDA/bin/conda install -c conda-forge conda-build anaconda-client
-      - name: Build package
-        run: export FRIGATE_FILE=$($CONDA/bin/conda build conda/recipes/frigate --output)
-      - name: Upload to Conda
-        run: |
-          RAPIDS_CONDA_TOKEN=${{ secrets.CONDA_RAPIDSAI_NIGHTLY_TOKEN }}
-          if ${{ inputs.build_type == "release"}}; then
-            RAPIDS_CONDA_TOKEN=${{ secrets.CONDA_RAPIDSAI_TOKEN }}
-          anaconda -t ${RAPIDS_CONDA_TOKEN} upload -u ${CONDA_USERNAME:-rapidsai} --label main --skip-existing --no-progress ${FRIGATE_FILE}
+    name: Build Frigate Package
+    uses: ./.github/workflows/build_and_upload_to_conda.yaml
+    with:
+      upload: true
