--- a/.github/workflows/build_and_upload_to_conda.yaml
+++ b/.github/workflows/build_and_upload_to_conda.yaml
@@ -3,7 +3,7 @@ on:
     upload:
       build_type:
         required: true
-        type: string
+        type: boolean
 
 jobs:
   build-and-upload-anaconda:
