--- a/.github/workflows/build_and_upload_to_pypi.yaml
+++ b/.github/workflows/build_and_upload_to_pypi.yaml
@@ -1,9 +1,9 @@
 on:
-   workflow_call:
+  workflow_call:
     upload:
       build_type:
         required: true
-        type: string
+        type: boolean
 
 jobs:
   build-and-upload-pypi:
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
       - name: Install dependencies
         run: |
