--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -20,14 +20,14 @@ jobs:
         run: $CONDA/bin/conda install -c conda-forge pre-commit
       - name: Run check style
         run: $CONDA/bin/pre-commit run --hook-stage manual --all-files --show-diff-on-failure
-  conda-python:
+  conda-build:
     needs: check-style
     name: Build Frigate Package
     uses: ./.github/workflows/build_and_upload_to_conda.yaml
     with:
       upload: false
   docs-build:
-    needs: [conda-python, wheels-python]
+    needs: [conda-build, wheels-build]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -47,7 +47,7 @@ jobs:
         run: |
           cd docs
           $CONDA/bin/sphinx-build -b dirhtml . _html
-  wheels-python:
+  wheels-build:
     needs: check-style
     name: Build Frigate Package
     uses: ./.github/workflows/build_and_upload_to_pypi.yaml
