use mambaforge container

--- a/.github/workflows/build_conda.yaml
+++ b/.github/workflows/build_conda.yaml
@@ -8,26 +8,18 @@ on:
 jobs:
   build-and-upload-anaconda:
     runs-on: ubuntu-latest
-
+    container:
+      image: "condaforge/mambaforge"
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-
-      - name: Install Mamba
-        run: |
-          $CONDA/bin/conda install -c conda-forge boa
-
-      - name: Build package
-        run: |
-          $CONDA/bin/conda mambabuild conda/recipes/frigate --output-folder /tmp/frigate-bld
-
+      - name: Install mambabuild
+        run: mamba install -c conda-forge boa
+      - name: Build Frigate package
+        run: conda mambabuild conda/recipes/frigate --output-folder /tmp/frigate-bld
       - name: Upload to Anaconda
         if: ${{ inputs.upload == 'true' }}
         run: |
