--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,14 +8,8 @@ on:
       - v[0-9][0-9].[0-9][0-9].[0-9][0-9]
 
 jobs:
-  build_and_upload_pypi:
+  build_and_upload:
     name: Build Frigate Package
-    uses: ./.github/workflows/build_pypi.yaml
-    with:
-      upload: true
-
-  build_and_upload_conda:
-    name: Build Frigate Package
-    uses: ./.github/workflows/build_conda.yaml
+    uses: ./.github/workflows/build_conda_and_pypi.yaml
     with:
       upload: true
