--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -20,22 +20,15 @@ jobs:
         run: $CONDA/bin/conda install -c conda-forge pre-commit
       - name: Run check style
         run: $CONDA/bin/pre-commit run --hook-stage manual --all-files --show-diff-on-failure
-  conda-python-build:
+  python-build:
     needs: check-style
     name: Build Frigate Package
-    uses: ./.github/workflows/build_conda.yaml
+    uses: ./.github/workflows/build_conda_and_pypi.yaml
     with:
       upload: false
   pr-builder:
     needs:
       - check-style
-      - conda-python-build
-      - wheel-build-frigate
+      - python-build
     secrets: inherit
     uses: rapidsai/shared-action-workflows/.github/workflows/pr-builder.yaml@branch-23.04
-  wheel-build-frigate:
-    needs: check-style
-    name: Build Frigate Package
-    uses: ./.github/workflows/build_pypi.yaml
-    with:
-      upload: false
