add workflow dispatch trigger for stable release

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,12 +4,19 @@ on:
   push:
     branches:
       - "branch-*"
-    tags:
-      - v[0-9][0-9].[0-9][0-9].[0-9][0-9]
-
+  workflow_dispatch:
+    inputs:
+      release_type:
+        description: "Specify release type"
+        type: choice
+        options:
+          - stable
+          - nightly
+        default: nightly
 jobs:
   build_and_upload:
     name: Build Frigate Package
     uses: ./.github/workflows/build_conda_and_pypi.yaml
     with:
       upload: true
+      release_type: ${{ inputs.release_type }}
