--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,6 +11,7 @@ on:
 jobs:
   build_and_upload:
     name: Build Frigate Package
+    secrets: inherit
     uses: ./.github/workflows/build_conda_and_pypi.yaml
     with:
       upload: true
