--- a/.github/workflows/build_conda_and_pypi.yaml
+++ b/.github/workflows/build_conda_and_pypi.yaml
@@ -10,7 +10,7 @@ defaults:
     shell: bash
 
 jobs:
-  conda-python-build:
+  conda-build:
     runs-on: ubuntu-latest
     container:
       image: condaforge/mambaforge
@@ -32,28 +32,23 @@ jobs:
             RAPIDS_CONDA_TOKEN=${{ secrets.CONDA_RAPIDSAI_TOKEN }}
           fi
           anaconda -t "${RAPIDS_CONDA_TOKEN}" upload --skip-existing --no-progress /tmp/frigate-bld/noarch/*.tar.bz2
-  wheel-build-frigate:
+  wheel-build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install wheel setuptools twine
-
       - name: Build package
         run: python setup.py sdist bdist_wheel
-
       - name: Upload to PyPI
         if: inputs.upload == true
         uses: pypa/gh-action-pypi-publish@release/v1
